--- a/src/main/resources/si/views/start.fxml
+++ b/src/main/resources/si/views/start.fxml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="274.0" layoutY="188.0" mnemonicParsing="false" text="Test" />
+      <Label layoutX="214.0" layoutY="68.0" text="QR generator">
+         <font>
+            <Font size="49.0" />
+         </font>
+      </Label>
+      <VBox alignment="TOP_CENTER" layoutX="164.0" layoutY="173.0" prefHeight="200.0" prefWidth="388.0" />
    </children>
 </AnchorPane>
