--- a/src/main/resources/si/views/start.fxml
+++ b/src/main/resources/si/views/start.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -17,5 +18,7 @@
       <Button fx:id="addButton" alignment="CENTER" layoutX="572.0" layoutY="182.0" minWidth="60.0" mnemonicParsing="false" onAction="#addButtonOnAction" text="Add" />
       <Button fx:id="removeButton" layoutX="571.0" layoutY="215.0" minWidth="60.0" mnemonicParsing="false" onAction="#removeButtonOnAction" text="Remove" />
       <Button fx:id="editButton" layoutX="571.0" layoutY="248.0" minWidth="60.0" mnemonicParsing="false" onAction="#editButtonOnAction" text="Edit" />
+      <Button fx:id="generateButton" layoutX="569.0" layoutY="357.0" mnemonicParsing="false" onAction="#generateButtonOnAction" text="Generate" />
+      <ProgressIndicator fx:id="progressBar" layoutX="588.0" layoutY="314.0" progress="0.0" visible="false" />
    </children>
 </AnchorPane>
